-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2, 10.3
-
Component/s: Prepared Statements
Debug build crashes on these query in 10.2 and 10.3:
EXECUTE IMMEDIATE 'SELECT * FROM t1 WHERE ?' USING IGNORE; |
EXECUTE IMMEDIATE 'SELECT * FROM t1 HAVING ?' USING IGNORE; |
EXECUTE IMMEDIATE 'SHOW DATABASES WHERE ?' USING DEFAULT; |
Not repeatable with 10.4 and 10.5.
- relates to
-
MDEV-21995 Server crashes in Item_field::real_type_handler with table value constructor
-
- Closed
-
-
MDEV-22560 Crash on a table value constructor with an SP variable
-
- Closed
-
-
MDEV-22579 No error when inserting DEFAULT(non_virtual_column) into a virtual column
-
- Closed
-
-
MDEV-22610 Crash in INSERT INTO t1 (VALUES (DEFAULT) UNION VALUES (DEFAULT))
-
- Closed
-